
ERR
!!found 1260
gui: view_job: 1260 does not know ...
gui: send_msj2GetStats 7 1260
gui: Couldn't connect to 1260 to send msj2
!1 port 1260 , run
..fisierule acolo si sync e running...in procese


master: 
start cu conf si dupa restart
env.getcommandlineargs .. 
momentan: crapa daca nu are args primit in onstart 
do: verifica daca nu are args in onstart poate are in cmdlineargs

adauga in registru si parametrul din scm (daca il primeste) doar daca nu exista deja in env.commandlineargs

=====================21.03

master: install service with user
facts: daca are conf din scm il ia pe ala... daca nu se uita in env.getcommandlineargs

gui:
gui validare conf.xml
running_folder : no>>die, invalid>>die : message box fara mw
serviceLogFile: warning in tab
sync_path: no>>die, invalid>>die : message box. no mw
jobs_conf_filename :  check daca e definit in tab jobs si la backup
perl_path : warning in tab si folosesc default
portfiles bkp_folder logs_folder touch_portfile_time email_server : warning in tab+ create dirs

file spec peste tot
========================26
refacut view job :  
scos laststats, kb fara virgula, timpul..formatare
x pe viewJob
save conf in fisier si use..
cand fac save la conf global: reface lista de joburi , $paths, $conf, variabilele scoase din paths(loadpaths)

sync: 
trimite stats cu timpul real nu cel al actiunilor
vrfy smtp ping

=================28.03
sync file::spec pt loadpaths , opt{s,d} 


===============2.04
send mail folosin bcc/cc
ignore attrs si pus totul intr-o funct 
md5 de 2 ori: impart la 2 (punea si pt sursa si pt dest)

 if ( md5($s_path) ne md5($d_path) ) {     >>>>>cica avea si &opt{v} iaix
trycount pt copy default 2 (daca nu merg md5 doar)
cred ca am rez pb cu threadurile pt workeri
foreach(keys %pool){
                 #$pool{$_}->kill('KILL')->join(); #? de ce mai fac kill... nu doar join?
                 $pool{$_}->join() if $pool{$_}->is_joinable(); # tananaaa try this
                 
