@@ -1,1 +1,1 @@
-perl sync.pl --conf "D:\_eclipse\conf.xml" -usethr -sid 1 -did 2 --s "\\wetp034a\did65048\WinCE\20120326_MMP_WINCE_V4.16.0" --d "D:\test_wince" -mail "Iustina.2.Melinte@continental-corporation.com" -smtp "smtphub07.conti.de"
+perl sync.pl --conf "D:\_eclipse\conf.xml" -usethr -sid 1 -did 2 --s "\\wetp034a\did65048\WinCE\20120402_MMP_WINCE_V4.17.0" --d "D:\test_wince2" -mail "Iustina.2.Melinte@continental-corporation.com,iustina.m.90@gmail.com" -smtp "smtphub07.conti.de" -md5 -excl "WinCE_4.17.0_no_DevEmu.zip" -v
