@@ -1,0 +1,10 @@
+use strict;
+use warnings;
+
+sub isModeSame(){
+    my ($s,$d)=@_;
+       
+    
+}
+
+if(4&2){print "ok"};
